<?xml version="1.0"?>
<package>
  <name>KCF</name>
  <version>0.1.0</version>
  <description>The mavros cmd publish package</description>

  <maintainer email="yuyangguang1993@qq.com">David Yu</maintainer>
  <license>BSD</license>
  
  <author email="yuyangguang1993@qq.com">David Yu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>stdmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>message_generation</build_depend>
  

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>stdmsg</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
